fixed flickering somewhat, storing auth info in localstorage. Safe?

--- a/Frontend/src/components/FavoritesCard/FavoritesCard.css
+++ b/Frontend/src/components/FavoritesCard/FavoritesCard.css
@@ -14,7 +14,7 @@
     overflow: hidden;
     position: relative;
     margin: 10px auto;
-    cursor: pointer;
+    /* cursor: pointer; */
     border-radius: 10px;
 }
 
@@ -25,7 +25,7 @@
 .profile-card-2 .profile-name {
     position: absolute;
     left: 0px;
-    bottom: 50%;
+    bottom: 0px;
     font-size: 20px;
     color: #FFF;
     text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
@@ -59,7 +59,7 @@
 }
 
 .profile-card-2:hover .profile-name {
-    bottom: 60px;
+    bottom: 20px;
 }
 
 .profile-card-2:hover .profile-username {
